mobile/scss/modules/company.scss
.company-screen{

  .content-top {
    background-color: $ribbon-bg;
  }
  
  .bar {
    h3 {
      width: 100%;
      text-align: center;
    }
    img.brand-img {
      top: -20px;
      max-height: 100%;
      max-width: 100%;
      position: relative;
      align-content: center;
    }
  }

  .news-list{
    div{
      white-space: normal;
    }
  }
  
  .profile-tabs {
    bottom: 0;
    
    .tab-content {
      padding-bottom: 0;
      padding-top: 0;
      top: 69px;
      height: auto;
      bottom: 0;

      div.list{
        overflow: hidden;
      }
    }
  }
}

.job-details {
  .job-item{
      
      h1 {
          text-align: center;
          border-bottom: 1px solid #ccc;
          font-size: 1.6em;
      }
      
      p{ 
      overflow: visible!important;
      text-overflow: clip;
      white-space: normal;
      margin-bottom: 10px;
      }
      
    .visual{
      mg{
        width: auto;
        height: auto;
        -webkit-border-radius: 0;
        -moz-border-radius: 0;
        border-radius: 0;
        top:auto;
        left:auto;
        margin: 0;
      }
    }
    
    .title{
      font-size: 14px;
      margin: 0;
      padding: 10px 0;
      color: #333;
      text-align: center;
    }
  }

  
}

.company-about {
    .item {
      padding: $item-padding;
      
      h3 {
        font-size: 1.4em;
        line-height: 1.5em;
        text-align: center;
      }
      
      p {
        font-size: 1.2em;
        line-height: 1.2em;
        overflow: visible;
        white-space: normal;
        text-align: justify;
        padding: $item-padding 0;
      }
      
      li {
        white-space: normal;
        line-height: 1.3em;
        
        &.item {
            font-size: 1.1em;
            padding-top: 0.8em;
            padding-bottom: 0.8em;
        }
      }
    }
  }

